# GreenDis

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
backend/: greendisClient.js  index.js
cpp-redis-engine/: .gitignore  CMakeLists.txt  README.md
cpp-redis-engine/benchmarks/: kv_benchmark.cpp
cpp-redis-engine/config/: server_config.json
cpp-redis-engine/docs/: architecture.md
cpp-redis-engine/src/: main.cpp
cpp-redis-engine/src/concurrency/: ThreadPool.cpp  ThreadPool.h
cpp-redis-engine/src/config/: ConfigLoader.cpp  ConfigLoader.h
cpp-redis-engine/src/controllers/: CommandDispatcher.cpp  CommandDispatcher.h
cpp-redis-engine/src/eviction/: LRUEviction.cpp  LRUEviction.h  TTLManager.cpp  TTLManager.h
cpp-redis-engine/src/persistence/: AOFWriter.cpp  AOFWriter.h  SnapshotManager.cpp  SnapshotManager.h
cpp-redis-engine/src/protocol/: CommandParser.cpp  CommandParser.h
cpp-redis-engine/src/server/: Connection.cpp  Connection.h  TcpServer.cpp  TcpServer.h
cpp-redis-engine/src/services/: KeyValueService.cpp  KeyValueService.h
cpp-redis-engine/src/storage/: Entry.h  MemoryStore.cpp  MemoryStore.h
cpp-redis-engine/src/utils/: Logger.cpp  Logger.h
cpp-redis-engine/tests/: config_tests.cpp  parser_tests.cpp  persistence_tests.cpp  service_tests.cpp  storage_tests.cpp
src/: main.cpp
